<resources>
    <string name="app_name">acme-explorer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="filter">Filter</string>
    <string name="columns">Columns</string>
    <string name="title">Title</string>
    <string name="precio">Precio</string>
    <string name="start_date">Start Date</string>
    <string name="date_of_arrival">Date of arrival</string>
    <string name="date_of_departure">Date of departure</string>
    <string name="description">Description</string>
    <string name="end_date">End Date</string>
    <string name="minimum_price">Minimum Price</string>
    <string name="maximum_price">Maximum Price</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="selected">Selected</string>
    <string name="login_email_et_hint">E-mail</string>
    <string name="login_password_et_hint">Password</string>
    <string name="login_button_mail_text">Login</string>
    <string name="login_button_google_text">Login with google</string>
    <string name="login_button_register_text">Register</string>
    <string name="login_mail_error_1">Email must not be empty</string>
    <string name="login_mail_error_2">Password must not be empty</string>
    <string name="login_mail_access_error">An error was appear during login</string>
    <string name="login_verified_mail_error">Your account is not validated, ¿Do you want to send you a new verification email?</string>
    <string name="login_verified_mail_error_ok">Send mail</string>
    <string name="login_verified_mail_error_sent">Verification mail sent to your email</string>
    <string name="login_verified_mail_error_no_sent">Can\'t sent a verification mail to your account</string>
    <string name="login_verified_mail_error_cancel">Cancel</string>
    <string name="login_google_play_services_error">Must to update google play services before continue</string>
    <string name="login_download_gps">Update</string>
    <string name="gps_download_url">market://details?id=com.google.android.gms</string>
    <string name="market_download_url">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="default_client_id">25917423956-5thpkrmme93ug1i3fh6sgfb6j03ond19.apps.googleusercontent.com</string>
    <string name="login_completed">User %1$ signIn Successfull</string>
    <string name="login_password_et_conf_hint">Repeat Password</string>
    <string name="registrer_user">Registrer user</string>
    <string name="signup_error_user">Email not valid</string>
    <string name="signup_error_pass">Password not valid</string>
    <string name="signup_error_pass_not_equal">Password doesn\'t match</string>
    <string name="crear_viaje">Crear Viaje</string>
    <string name="url_image">URL image</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="fecha_fin">Fecha Fin</string>
    <string name="date_title_empty_error">Las fechas y el titulo no puede estar vacio</string>
    <string name="obtener_imagen">Obtener Imagen</string>
    <string name="take_picture_camara_rationale">Necesitamos acceder a tu camara</string>
    <string name="take_picture_camara_rationale_ok">Permitir</string>
    <string name="camera_not_granted">No es posible usar esta función sin la camara</string>
    <string name="write_external_not_granted">No se puede almacenar la foto sin este permiso</string>
    <string name="location_rationale">Necesitamos tu validación para esta funcionalidad</string>
    <string name="location_rationale_ok">Permitir</string>
    <string name="location_cancel">Este permiso es importante para la applicación</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
</resources>
