<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormTripActivity">


    <EditText
        android:id="@+id/formTrip_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="5dp"
        android:inputType="text"
        android:hint="@string/title"
        android:autofillHints="" />

    <EditText
        android:id="@+id/formTrip_imageURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="5dp"
        android:inputType="textUri"
        android:hint="@string/url_image"
        android:autofillHints="" />

    <EditText
        android:id="@+id/formTrip_description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:ems="10"
        android:layout_margin="5dp"
        android:inputType="text|textMultiLine"
        android:hint="@string/description"
        android:autofillHints="" />

    <EditText
        android:id="@+id/formTrip_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="5dp"
        android:inputType="number"
        android:hint="@string/precio"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/fecha_inicio"
            android:textColor="@color/c2"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/textViewStartDate"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/dd_mm_yyyy"
            android:textSize="20sp"
            android:layout_height="wrap_content">
        </TextView>

        <ImageView
            android:id="@+id/imageViewStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_date_24dp">
        </ImageView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/fecha_fin"
            android:textColor="@color/c2"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/textViewEndDate"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/dd_mm_yyyy"
            android:textSize="20sp"
            android:layout_height="wrap_content">
        </TextView>

        <ImageView
            android:id="@+id/imageViewEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:src="@drawable/ic_date_24dp">

        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></LinearLayout>

    <Button
        android:id="@+id/formTrip_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/c2"
        android:layout_gravity="bottom"
        android:text="@string/crear_viaje"
        android:textSize="15sp"
        android:textColor="@color/white"
    ></Button>
</LinearLayout>