<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">
    
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:id="@+id/login_progress"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        ></ProgressBar>
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/app_name"
        >
    </ImageView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_main_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_login_form"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_email_et"
                    android:hint="@string/login_email_et_hint"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_password_et"
                    android:hint="@string/login_password_et_hint"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_button_mail"
                android:backgroundTint="@color/c1"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:textAllCaps="true"
                android:text="@string/login_button_mail_text"
                android:textColor="@color/white"/>


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_button_google"
                android:backgroundTint="@color/red_google"
                android:drawableLeft="@drawable/common_google_signin_btn_icon_light_normal"
                android:textAllCaps="true"
                android:text="@string/login_button_google_text"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_button_register"
                android:textAllCaps="true"
                android:text="@string/login_button_register_text"
                android:layout_marginTop="32dp"
                android:textColor="@color/c2"
                android:backgroundTint="@color/transparent"
                style="@style/Widget.AppCompat.Button.Borderless"/>


        </LinearLayout>
    </ScrollView>


</LinearLayout>