<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FilterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textColor="@color/c2"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/textViewStartDate"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/dd_mm_yyyy"
            android:layout_height="wrap_content">
        </TextView>

        <ImageView
            android:id="@+id/imageViewStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_date_24dp">
        </ImageView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textColor="@color/c2"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/textViewEndDate"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/dd_mm_yyyy"
            android:layout_height="wrap_content">
        </TextView>

        <ImageView
            android:id="@+id/imageViewEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:src="@drawable/ic_date_24dp">

        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/minimum_price"
            android:textColor="@color/c2"
            android:layout_weight="2"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:textStyle="bold">
        </TextView>

        <EditText
            android:id="@+id/editTextMinPrice"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:src="@drawable/ic_euro_24dp">

        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/maximum_price"
            android:textColor="@color/c2"
            android:layout_weight="2"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:textStyle="bold">
        </TextView>

        <EditText
            android:id="@+id/editTextMaxPrice"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:src="@drawable/ic_euro_24dp">

        </ImageView>
    </LinearLayout>

    <Button
        android:id="@+id/buttonSaveExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="Guardar y salir"></Button>
</LinearLayout>